--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
 <head>
 	<meta charset="utf-8" lang="en">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script type="text/javascript">
+  WebFontConfig = {
+    google: { families: [ 'Shadows+Into+Light::latin' ] }
+  };
+  (function() {
+    var wf = document.createElement('script');
+    wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+      '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+    wf.type = 'text/javascript';
+    wf.async = 'true';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(wf, s);
+  })(); </script>
 	<!-- change the title to something related to your project -->
-	<title>Website Page 1</title>
+	<title>The Nic ad Ben Blog</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
@@ -46,17 +59,7 @@
 
 			
 		</nav>
-		<div class="col-md-2"></div>
-			<div class="col-md-10"></div>
-			<div class="col-md-4">
-				<p> This is going to be good</p>
-			</div>
-			<div class="col-md-4">
-				<img src="images/lensbrothers1.jpg" class="img-responsive">
-			</div>
-			<div class="col-md-4">
-				<p>  but not as good as the pictures</p>
-			</div>
+		
 		</header><!-- -create columns by adding the 'col-md-number' class to elements inside a row where number is anything between 1 and 12 --> 
 
 		<!-- section row, all primary content -->
