--- a/benjamin.html
+++ b/benjamin.html
@@ -2,7 +2,19 @@
 <html>
 <head>
 	<meta charset="utf-8" lang="en">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1"><script type="text/javascript">
+  WebFontConfig = {
+    google: { families: [ 'Shadows+Into+Light::latin' ] }
+  };
+  (function() {
+    var wf = document.createElement('script');
+    wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+      '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+    wf.type = 'text/javascript';
+    wf.async = 'true';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(wf, s);
+  })(); </script>
 	<!-- change the title to something related to your project -->
 	<title>The Nic ad Ben Blog</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
@@ -65,7 +77,7 @@
 		<section class="row">
 	
 			<div class="col-md-4">
-				<p> This is his logo</p>
+				<h3> This is His logo</h3>
 			</div>
 
 			<div class="col-md-4">
@@ -79,10 +91,16 @@
 		</section>
 		<!-- footer row, all footer content -->
 		<footer class="row">
-			<div class="col-md-4"></div>
-			<div class="col-md-4"></div>
-			<div class="col-md-4"></div>
-			
+		
+			<div class="col-md-4">
+				<p> This is going to be good</p>
+			</div>
+			<div class="col-md-4">
+				<img src="images/lensbrothers1.jpg" class="img-responsive">
+			</div>
+			<div class="col-md-4">
+				<p>  but not as good as the pictures</p>
+			</div>
 		</footer>
 	</div>
 </body>
