--- a/nicole.html
+++ b/nicole.html
@@ -3,6 +3,19 @@
 <head>
 	<meta charset="utf-8" lang="en">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script type="text/javascript">
+  WebFontConfig = {
+    google: { families: [ 'Shadows+Into+Light::latin' ] }
+  };
+  (function() {
+    var wf = document.createElement('script');
+    wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+      '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+    wf.type = 'text/javascript';
+    wf.async = 'true';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(wf, s);
+  })(); </script>
 	<!-- change the title to something related to your project -->
 	<title>The Nic ad Ben Blog</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
