--- a/benjamin.html
+++ b/benjamin.html
@@ -65,11 +65,11 @@
 				</div>
 
 			<div class="col-md-2"> 
-			<p>    
+			<p>  :)  
 			</p>  
 			</div>
 			<div class="col-md-10"> 
-			<p>        
+			<p>  :)      
 			</p>  
 			</div>
 			
@@ -91,7 +91,23 @@
 		</section>
 		<!-- footer row, all footer content -->
 		<footer class="row">
-		
+					
+			<div class="col-md-2"> 
+			<p>  :)  
+			</p>  
+			</div>
+			<div class="col-md-10"> 
+			<p>  :)      
+			</p>  
+			</div>		
+			<div class="col-md-2"> 
+			<p>  :)  
+			</p>  
+			</div>
+			<div class="col-md-10"> 
+			<p>  :)      
+			</p>  
+			</div>
 			<div class="col-md-4">
 				<p> This is going to be good</p>
 			</div>
