--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 				</ul>
 			</div>
 			<div class="col-md-12 text-center">
-				<h1>This... Is... A...TURTLE BLOG</h1>
-				<h3>Nicole Burgess, Tech Trainee at YUC</h3>
+				<h1>ThE NiC & BeN BlOg</h1>
+				<h3>Us at its finest</h3>
 			</div>
 
 			
@@ -64,6 +64,22 @@
 
 		<!-- section row, all primary content -->
 		<section class="row">
+		<div class="col-md-2"> 
+			<p>  :)  
+			</p>  
+			</div>
+			<div class="col-md-10"> 
+			<p>  :)      
+			</p>  
+			</div>		
+			<div class="col-md-2"> 
+			<p>  :)  
+			</p>  
+			</div>
+			<div class="col-md-10"> 
+			<p>  :)      
+			</p>  
+			</div>
 			<div class="col-md-3"></div>
 			<div class="col-md-6"></div>
 			<div class="col-md-3"></div>
@@ -71,9 +87,23 @@
 		</section>
 		<!-- footer row, all footer content -->
 		<footer class="row">
-			<div class="col-md-4"></div>
-			<div class="col-md-4"></div>
-			<div class="col-md-4"></div>
+		<div class="col-md-2"> 
+			<p>  :)  
+			</p>  
+			</div>
+			<div class="col-md-10"> 
+			<p>  :)      
+			</p>  
+			</div>		
+			<div class="col-md-2"> 
+			<p>  :)  
+			</p>  
+			</div>
+			<div class="col-md-10"> 
+			<p>  :)      
+			</p>  
+			</div>
+			
 			
 		</footer>
 	</div>
