--- a/memories.html
+++ b/memories.html
@@ -56,9 +56,13 @@
 		</nav>
 		<!-- section row, all primary content -->
 		<section class="row">
-			<div class="col-md-3"></div>
-			<div class="col-md-6"></div>
-			<div class="col-md-3"></div>
+			<div class="col-md-4"></div>
+			<div class="col-md-4">
+				<p> <3 </p>
+			</div>
+			<div class="col-md-4">
+				<img src="images/the bean.jpg" class="img-responsive">
+			</div>
 			
 		</section>
 		<!-- footer row, all footer content -->
